--- a/app/tests/g02meTest.html
+++ b/app/tests/g02meTest.html
@@ -14,9 +14,9 @@ var ts = new UT.TestSuite();
 ts.DWOutputDiv();
 
 // API Keys signed with the default (local) secret key (will not work on hosted Go2.me)
-var sAPIKey = "api~test~10~2009-01-01~C2CC89F2EEDD6B03A282F55878C08281DB6168AF";
+var sAPIKey = "api~test~120~2009-01-01~E9C9F3E0585A8B859EE36C04B74F65E762BBAC2A";
 var sAPIKeyExpired = "api~test~10~2008-01-01~51B2192FF5481272A0031774B41259EA51D728F7";
-var sAPIKeySlow = "api~test~1~2009-01-01~E448E0BD69811529FE28E3B20FBD719755B69567";
+var sAPIKeySlow = "api~test-slow~1~2009-01-01~8A0044AD938E5186EA17D385F13DC58BF107E18B";
 
 ts.AddTest("Map", function(ut)
 {
@@ -25,7 +25,7 @@ ts.AddTest("Map", function(ut)
 	ut.AsyncSequence([
 		function(ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"http://google.com"}, function(obj) {
+			new UT.ScriptData("/map/").Call({url:"http://google.com", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj, {status:"OK", url:"http://google.com/", title:"http://google.com/"});
 				ut.AssertGT(obj.scores.day, 0);
 				ut.AssertType(obj.created, Date);
@@ -35,7 +35,7 @@ ts.AddTest("Map", function(ut)
 			},
 		function(ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"http://google.com?id=2"}, function(obj) {
+			new UT.ScriptData("/map/").Call({url:"http://google.com?id=2", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj, {status:"OK", url:"http://google.com/?id=2", title:"http://google.com/?id=2"});
 				ut.AssertNEq(obj.id, objInit.id);
 				ut.NextFn();
@@ -43,7 +43,7 @@ ts.AddTest("Map", function(ut)
 			},
 		function(ut)
 			{
-			new UT.ScriptData("/lookup/").Call({url:"http://google.com"}, function(obj) {
+			new UT.ScriptData("/lookup/").Call({url:"http://google.com", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj,
 					{status:"OK", url:"http://google.com/", id:objInit.id, viewed:objInit.viewed, shared:objInit.shared});
 				ut.NextFn();
@@ -51,7 +51,7 @@ ts.AddTest("Map", function(ut)
 			},
 		function(ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"http://google.com"}, function(obj) {
+			new UT.ScriptData("/map/").Call({url:"http://google.com", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj,
 					{status:"OK", url:"http://google.com/", id:objInit.id, viewed:objInit.viewed, shared:objInit.shared});
 				ut.NextFn();
@@ -59,7 +59,7 @@ ts.AddTest("Map", function(ut)
 			},
 		function(ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"google.com"}, function(obj) {
+			new UT.ScriptData("/map/").Call({url:"google.com", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj,
 					{status:"OK", url:"http://google.com/", id:objInit.id, viewed:objInit.viewed, shared:objInit.shared});
 				ut.NextFn();
@@ -67,7 +67,7 @@ ts.AddTest("Map", function(ut)
 			},
 		function(ut)
 			{
-			new UT.ScriptData("/map/").Call({url:" http://google.com "}, function(obj) {
+			new UT.ScriptData("/map/").Call({url:" http://google.com ", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj,
 					{status:"OK", url:"http://google.com/", id:objInit.id, viewed:objInit.viewed, shared:objInit.shared});
 				ut.NextFn();
@@ -83,7 +83,7 @@ ts.AddTest("Map", function(ut)
 			},
 		function(ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"http://google.com"}, function(obj) {
+			new UT.ScriptData("/map/").Call({url:"http://google.com", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj,
 					{status:"OK", url:"http://google.com/", id:objInit.id, viewed:objInit.viewed, shared:objInit.shared});
 				ut.NextFn();
@@ -91,7 +91,7 @@ ts.AddTest("Map", function(ut)
 			},
 		function(ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"https://google.com"}, function(obj) {
+			new UT.ScriptData("/map/").Call({url:"https://google.com", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj,
 					{status:"OK", url:"https://google.com/"});
 				ut.NextFn();
@@ -105,49 +105,49 @@ ts.AddTest("Errors", function(ut)
 	ut.AsyncSequence([
 		function (ut)
 			{
-			new UT.ScriptData("/map/").Call({url:""}, function (obj) {
+			new UT.ScriptData("/map/").Call({url:"", apikey:sAPIKey}, function (obj) {
 				ut.AssertContains(obj, {status:"Fail"});
 				ut.NextFn();
 				});
 			},
 		function (ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"http://g02.me"}, function (obj) {
+			new UT.ScriptData("/map/").Call({url:"http://g02.me", apikey:sAPIKey}, function (obj) {
 				ut.AssertContains(obj, {status:"Warning/Domain"});
 				ut.NextFn();
 				});
 			},
 		function (ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"http://www.g02.me"}, function (obj) {
+			new UT.ScriptData("/map/").Call({url:"http://www.g02.me", apikey:sAPIKey}, function (obj) {
 				ut.AssertContains(obj, {status:"Fail/Domain"});
 				ut.NextFn();
 				});
 			},
 		function (ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"http://G02.ME"}, function (obj) {
+			new UT.ScriptData("/map/").Call({url:"http://G02.ME", apikey:sAPIKey}, function (obj) {
 				ut.AssertContains(obj, {status:"Warning/Domain"});
 				ut.NextFn();
 				});
 			},
 		function (ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"http://www.tinyurl.com"}, function (obj) {
+			new UT.ScriptData("/map/").Call({url:"http://www.tinyurl.com", apikey:sAPIKey}, function (obj) {
 				ut.AssertContains(obj, {status:"Fail/Domain"}, "www.tinyurl.com");
 				ut.NextFn();
 				});
 			},
 		function (ut)
 			{
-			new UT.ScriptData("/map/").Call({url:"script://google.com"}, function (obj) {
+			new UT.ScriptData("/map/").Call({url:"script://google.com", apikey:sAPIKey}, function (obj) {
 				ut.AssertContains(obj, {status:"Fail"});
 				ut.NextFn();
 				});
 			},
 		function(ut)
 			{
-			new UT.ScriptData("/lookup/").Call({url:"http://nosuchurl.com"}, function(obj) {
+			new UT.ScriptData("/lookup/").Call({url:"http://nosuchurl.com", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj, {status:"Fail/NotFound"});
 				ut.NextFn();
 				});
@@ -390,6 +390,56 @@ ts.AddTest("Tag", function(ut)
 				}));
 			}
 		]);
+}).Async(true, 5000);
+
+ts.AddTest("Throttle Writes", function(ut)
+{
+	var objInit;
+
+	ut.AsyncSequence([
+  		function(ut)
+  			{
+  			new UT.ScriptData("/map/").Call({url:"http://google.com"}, function(obj) {
+  				ut.AssertContains(obj, {status:"OK", url:"http://google.com/"});
+  				objInit = obj;
+  				ut.NextFn();
+  				});
+  			},
+  		function(ut)
+	  		{
+  		  	new UT.ScriptData("/admin/flush-memcache").Call({apikey:sAPIKey}, function(obj) {
+  		  		ut.AssertContains(obj, {status:"OK"});
+  		  		ut.NextFn();
+  		  		});
+	  		},
+  		function(ut)
+  			{
+  	  		var sd = new UT.ScriptData("/comment/");
+  	  		var iCalls = 5;
+  	  		var iErrors = 0;
+
+  	  		Repeat();
+
+  	  		function Repeat()
+  	  			{
+	  			sd.Call({id:objInit.id, comment:"hello", apikey:sAPIKeySlow}, ut.FnWrap(function (obj) {
+		  			iCalls--;
+		  			if (obj.status != "OK")
+			  			{
+			  			ut.AssertEq(obj.status, "Fail/Busy/write");
+			  			iErrors++;
+			  			}
+		  			if (iCalls == 0)
+			  			{
+			  			ut.Assert(iErrors >= 1 && iErrors < 5, "Should fail some - but not all - calls: " + iErrors);
+			  			ut.Async(false);
+			  			return;
+			  			}
+		  			Repeat();
+	  				}));
+  	  			}
+  			}
+  		]);
 }).Async(true, 5000);
 
 </script>
