--- a/trunk/app/tests/g02meTest.html
+++ b/trunk/app/tests/g02meTest.html
@@ -415,7 +415,8 @@ ts.AddTest("Throttle Writes", function(ut)
   		function(ut)
   			{
   	  		var sd = new Go2.ScriptData("/comment/");
-  	  		var iCalls = 5;
+  	  		var iCallsMax = 5;
+  	  		var iCalls = iCallsMax;
   	  		var iErrors = 0;
 
   	  		Repeat();
@@ -431,7 +432,7 @@ ts.AddTest("Throttle Writes", function(ut)
 			  			}
 		  			if (iCalls == 0)
 			  			{
-			  			ut.Assert(iErrors >= 1 && iErrors < 5, "Should fail some - but not all - calls: " + iErrors);
+			  			ut.Assert(iErrors >= 1 && iErrors < iCallsMax, "Should fail some - but not all - calls: " + iErrors);
 			  			ut.Async(false);
 			  			return;
 			  			}
@@ -440,7 +441,7 @@ ts.AddTest("Throttle Writes", function(ut)
   	  			}
   			}
   		]);
-}).Async(true, 5000);
+}).Async(true, 10000);
 
 ts.AddTest("Call", function(ut)
 {
