--- a/trunk/app/tests/g02meTest.html
+++ b/trunk/app/tests/g02meTest.html
@@ -25,8 +25,8 @@ ts.AddTest("Map", function(ut)
 	ut.AsyncSequence([
 	    function(ut)
 		    {
-		    new Go2.ScriptData("/cmd/setusername").Call({username:"mckoss"}, function(obj) {
-			    ut.AssertContains(obj, {status:"OK", username:"mckoss"});
+		    new Go2.ScriptData("/cmd/setusername").Call({username:"test"}, function(obj) {
+			    ut.AssertContains(obj, {status:"OK", username:"test"});
 			    ut.NextFn();
 		    	});
 		    },
@@ -258,9 +258,9 @@ ts.AddTest("Comment", function(ut)
 			},
 		function(ut)
 			{
-			new Go2.ScriptData("/comment/").Call({id:objInit.id, force: true, comment:"mckoss :  This is a test  [  ,,tag1,  tag2]", apikey:sAPIKey}, function (obj) {
+			new Go2.ScriptData("/comment/").Call({id:objInit.id, force: true, comment:"test :  This is a test  [  ,,tag1,  tag2]", apikey:sAPIKey}, function (obj) {
 				ut.AssertContains(obj, {status:"OK", url:"http://google.com/"});
-				ut.AssertContains(obj.comments[0], {comment:"This is a test", tags:"tag1,tag2", user:"mckoss"});
+				ut.AssertContains(obj.comments[0], {comment:"This is a test", tags:"tag1,tag2", user:"test"});
 				ut.AssertType(obj.comments[0].created, Date);
 				ut.AssertEq(obj.comments.length, cComment+1);
 				ut.AssertContains(obj.tags, ["tag1", "tag2"]);
@@ -273,16 +273,16 @@ ts.AddTest("Comment", function(ut)
 				ut.AssertContains(obj, {status:"OK", url:"http://google.com/"});
 				ut.AssertEq(obj.comments.length, cComment+1);
 				com = obj.comments[0];
-				ut.AssertContains(com, {comment:"This is a test", user:"mckoss", tags:"tag1,tag2"});
+				ut.AssertContains(com, {comment:"This is a test", user:"test", tags:"tag1,tag2"});
 				ut.NextFn();
 				});
 			},
 		function(ut)
 			{
 			tagUniq = "dm-" + Math.floor(Math.random()*1000);
-			new Go2.ScriptData("/comment/").Call({id:objInit.id, force: true, comment:"mckoss :  [" + tagUniq + "]", apikey:sAPIKey}, ut.FnWrap(function (obj) {
+			new Go2.ScriptData("/comment/").Call({id:objInit.id, force: true, comment:"test :  [" + tagUniq + "]", apikey:sAPIKey}, ut.FnWrap(function (obj) {
 				ut.AssertContains(obj, {status:"OK", url:"http://google.com/"});
-				ut.AssertContains(obj.comments[0], {comment:"", user:"mckoss", tags:tagUniq});
+				ut.AssertContains(obj.comments[0], {comment:"", user:"test", tags:tagUniq});
 				com2= obj.comments[0];
 				ut.AssertEq(obj.comments.length, cComment+2);
 				ut.AssertContains(obj.tags, ["tag1", "tag2", tagUniq]);
@@ -347,7 +347,7 @@ ts.AddTest("User", function(ut)
 			{
 			// BUG: Because of security for running unitTest, assume default account
 			// is test@example.com -> hence despite setusername call, users name is test
-			// and not "mckoss".
+			// and not "test".
 			new Go2.ScriptData("/user/test").Call({}, ut.FnWrap(function(obj) {
 				ut.AssertContains(obj, {status:"OK"});
 				ut.AssertType(obj.urls, Array);
