--- a/trunk/app/tests/g02meTest.html
+++ b/trunk/app/tests/g02meTest.html
@@ -77,6 +77,7 @@ ts.AddTest("Map", function(ut)
 			new Go2.ScriptData("/map/").Call({url:" http://google.com ", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj,
 					{status:"OK", url:"http://google.com/", id:objInit.id, viewed:objInit.viewed, shared:objInit.shared});
+				console.log(1,objInit.viewed);
 				ut.NextFn();
 				});
 			},
@@ -93,6 +94,7 @@ ts.AddTest("Map", function(ut)
 			new Go2.ScriptData("/map/").Call({url:"http://google.com", apikey:sAPIKey}, function(obj) {
 				ut.AssertContains(obj,
 					{status:"OK", url:"http://google.com/", id:objInit.id, viewed:objInit.viewed, shared:objInit.shared});
+				console.log(2, objInit.viewed);
 				ut.NextFn();
 				});
 			},
