--- a/app/tests/g02meTest.html
+++ b/app/tests/g02meTest.html
@@ -4,7 +4,8 @@
 <title>Go2.me Unit Tests</title>
 <script src="unit.js"></script>
 <script src="/scripts/g02me.js"></script>
-<script src="firebug/firebugx.js"></script>
+<script src="firebug/pi.js"></script>
+<script src="firebug/firebug.js"></script>
 </head>
 <body onload="ts.Run();ts.Report();">
 <h1><script>document.write(document.title);</script></h1>
